crates/pirc-conformance/tests/snapshots/auth__proxy_secret.snap
---
source: crates/pirc-conformance/tests/auth.rs
expression: t.into_value()
---
[
  {
    "body": {
      "error": {
        "code": "unauthenticated",
        "message": "Request did not arrive from a trusted proxy"
      }
    },
    "headers": {
      "content-type": "application/json"
    },
    "request": "GET /api/workspaces",
    "status": 401,
    "step": "no proxy secret: GET"
  },
  {
    "body": {
      "error": {
        "code": "unauthenticated",
        "message": "Request did not arrive from a trusted proxy"
      }
    },
    "headers": {
      "content-type": "application/json"
    },
    "request": "POST /api/sessions",
    "status": 401,
    "step": "no proxy secret: POST"
  },
  {
    "body": {
      "error": {
        "code": "unauthenticated",
        "message": "Request did not arrive from a trusted proxy"
      }
    },
    "headers": {
      "content-type": "application/json"
    },
    "request": "GET /api/workspaces",
    "status": 401,
    "step": "wrong proxy secret: GET"
  },
  {
    "body": {
      "error": {
        "code": "unauthenticated",
        "message": "Request did not arrive from a trusted proxy"
      }
    },
    "headers": {
      "content-type": "application/json"
    },
    "request": "POST /api/sessions",
    "status": 401,
    "step": "wrong proxy secret: POST"
  },
  {
    "body": {
      "workspaces": []
    },
    "headers": {
      "content-type": "application/json"
    },
    "request": "GET /api/workspaces",
    "status": 200,
    "step": "proxy secret: GET"
  },
  {
    "body": {
      "error": {
        "code": "invalid_input",
        "message": "Invalid request"
      }
    },
    "headers": {
      "content-type": "application/json"
    },
    "request": "POST /api/sessions",
    "status": 400,
    "step": "proxy secret: POST"
  }
]
